# CFGrid

./: .clang-format  .clang-tidy  .doxyfile  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
docs/: styleguide.md
include/: _node_parser.h  _topo_parser.h  detect_format.h  gmsh.h  node_parser.h  reader.h  section_reader.h  topo_parser.h  utils.h
src/: CMakeLists.txt  _node_parser.cpp  gmsh.cpp  main.cpp  node_parser.cpp  reader.cpp  topo_parser.cpp
tests/: CMakeLists.txt
tests/inputs/: CMakeLists.txt  box-bin.msh  box.msh.txt
tests/internals/: CMakeLists.txt  _node_parser.cpp  _topo_parser.cpp
tests/reader/: CMakeLists.txt  detect_format.cpp  determine-format.cpp  find_section.cpp  parse_header.cpp
tests/utils/: CMakeLists.txt  append.cpp  partition.cpp  test_stride.cpp
